Document "bcfg2-info buildbundle" in the manpage
Mention the "buildbundle" command in the bcfg2-info(8) manpage.

--- a/man/bcfg2-info.8
+++ b/man/bcfg2-info.8
@@ -59,6 +59,11 @@ Build config for hostname, writing separate files to dirname.
 .RS
 Build configs for all clients in directory.
 .RE
+.B buildbundle <filename> <hostname>
+.RS
+Build bundle for hostname (not written to disk). If filename is a bundle
+template, it is rendered.
+.RE
 .B buildfile <filename> <hostname>
 .RS
 Build config file for hostname (not written to disk).
