added --altsrc flag to bcfg2-info buildfile

--- a/man/bcfg2-info.8
+++ b/man/bcfg2-info.8
@@ -64,7 +64,7 @@ Build configs for all clients in directory.
 Build bundle for hostname (not written to disk). If filename is a bundle
 template, it is rendered.
 .RE
-.B buildfile <filename> <hostname>
+.B buildfile [--altsrc=<altsrc>] <filename> <hostname>
 .RS
 Build config file for hostname (not written to disk).
 .RE
